crates/action-graph/tests/snapshots/action_graph_test__action_graph__sync_project__graphs_single.snap
---
source: crates/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SetupSystemTool" ]
    2 [ label="SyncSystemProject(bar)" ]
    1 -> 0 [ ]
    2 -> 1 [ ]
}

