crates/action-graph/tests/snapshots/action_graph_test__action_graph__sync_project__graphs_without_deps.snap
---
source: crates/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SetupToolchain(system)" ]
    2 [ label="SyncProject(system, foo)" ]
    3 [ label="SyncProject(system, qux)" ]
    1 -> 0 [ ]
    2 -> 1 [ ]
    3 -> 1 [ ]
}
