crates/action-graph/tests/snapshots/action_graph_test__action_graph__sync_project__inherits_platform_tool.snap
---
source: crates/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SetupNodeTool(20.0.0)" ]
    2 [ label="SyncNodeProject(bar)" ]
    3 [ label="SetupRustTool(1.70.0)" ]
    4 [ label="SyncRustProject(qux)" ]
    1 -> 0 [ ]
    2 -> 1 [ ]
    3 -> 0 [ ]
    4 -> 3 [ ]
}

